--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -261,7 +261,7 @@
                         <table id="buttons" class="table">
                             <tr>
                                 <td>
-                                    <button class="btn inherentsButton active">Врожденки</button>
+                                    <button class="btn inherentsButton active">Особенности</button>
                                 </td>
                                 <td>
                                     <button class="btn attributesButton">Атрибуты</button>
@@ -288,7 +288,7 @@
                         </table>
                     </div>
                     <div class="hidden-xs-down hidden-sm-down">
-                        <button class="btn margin-inline inherentsButton active">Врожденки</button>
+                        <button class="btn margin-inline inherentsButton active">Особенности</button>
                         <button class="btn margin-inline attributesButton">Атрибуты</button>
                         <button class="btn margin-inline attachedButton">Прикрепленные навыки</button>
                         <button class="btn margin-inline triggerButton">Тригерные навыки</button>
