--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -282,7 +282,7 @@
                                     <button class="btn spellsButton">Заклинания</button>
                                 </td>
                                 <td>
-                                    <button class="btn spellsButton">Заметки</button>
+                                    <button class="btn notesButton">Заметки</button>
                                 </td>
                             </tr>
                         </table>
